<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".StartActivity"
    android:background="@drawable/bg_start">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.devspark.robototextview.widget.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_time_title"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textSize="35sp"
            app:typeface="roboto_slab_light"/>

        <com.devspark.robototextview.widget.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_time_info"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            app:typeface="roboto_light" />

        <com.devspark.robototextview.widget.RobotoButton
            android:id="@+id/btn_2_min"
            android:text="@string/choose_time_2_min"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="25sp"
            android:background="@drawable/btn_background"
            android:layout_marginTop="30dp"
            app:typeface="roboto_light"/>
        <com.devspark.robototextview.widget.RobotoButton
            android:id="@+id/btn_5_min"
            android:text="@string/choose_time_5_min"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="25sp"
            android:background="@drawable/btn_background"
            android:layout_marginTop="20dp"
            app:typeface="roboto_light"/>
        <com.devspark.robototextview.widget.RobotoButton
            android:id="@+id/btn_10_min"
            android:text="@string/choose_time_10_min"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="25sp"
            android:background="@drawable/btn_background"
            android:layout_marginTop="20dp"
            app:typeface="roboto_light"
            android:visibility="gone"/>
        <com.devspark.robototextview.widget.RobotoButton
            android:id="@+id/btn_30_min"
            android:text="@string/choose_time_30_min"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="25sp"
            android:background="@drawable/btn_background"
            android:layout_marginTop="20dp"
            app:typeface="roboto_light"
            android:visibility="gone"/>
        <com.devspark.robototextview.widget.RobotoButton
            android:id="@+id/btn_60_min"
            android:text="@string/choose_time_60_min"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="25sp"
            android:background="@drawable/btn_background"
            android:layout_marginTop="20dp"
            app:typeface="roboto_light"
            android:visibility="gone"/>
        <com.devspark.robototextview.widget.RobotoButton
            android:id="@+id/btn_180_min"
            android:text="@string/choose_time_180_min"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="25sp"
            android:background="@drawable/btn_background"
            android:layout_marginTop="20dp"
            app:typeface="roboto_light"
            android:visibility="gone"/>
    </LinearLayout>
</FrameLayout>
