<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_monastery"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StartActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/monastery_lesson_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/monastery_lesson_number"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            app:typeface="roboto_light"/>

        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/monastery_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:textSize="35sp"
            app:typeface="roboto_slab_thin"
            tools:text="See In"/>

        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/monastery_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:textColor="#c57b24"
            android:textSize="17sp"
            app:typeface="roboto_light"
            tools:text="Work with mental images"/>

        <com.devspark.robototextview.widget.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="10dp"
            android:text="@string/monastery_basic_idea"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            app:typeface="roboto_bold"/>
        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/monastery_lesson_idea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            app:typeface="roboto_light"
            tools:text="@string/home_info" />
        <com.devspark.robototextview.widget.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/monastery_basic_instruction"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            app:typeface="roboto_bold" />
        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/monastery_lesson_instruction"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            app:typeface="roboto_light"
            tools:text="@string/home_info" />

        <com.devspark.robototextview.widget.RobotoButton
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_background"
            android:text="@string/monastery_next"
            android:textSize="25sp"
            app:typeface="roboto_light"/>
    </LinearLayout>
</FrameLayout>
